# Projects

./: README.md  TunedMassDamper.m  demo3.py  machinery.m
Flatbed Trolley Spring Damper Feedback Control System/: machinery.m
Fuzzy Controller/: .gitignore  README.md  RoboBlock.slx  Robot_control.fis  aggregated_anfis_training_data_final.mat  anfis_l.fis  anfis_l_train.fis  anfis_r.fis  anfis_r_train.fis  final_IO.mat  final_IO_l.mat  final_IO_r.mat  robo.slx  robo_control.fis  robo_control_improved.fis  robo_control_test.fis  robo_sugeno.fis  robo_sugeno_l.fis  robo_sugeno_r.fis  sim_run_01_varied_initial.mat  sim_run_02_varied_initial.mat  sim_run_03_varied_initial.mat  sim_run_04_varied_initial.mat  sim_run_05_varied_initial.mat  sim_run_06_varied_initial.mat  sim_run_07_varied_initial.mat
Python Scripts/: demo2.py  my_node.py
Robotic Manipulator/: Animation.m  Parameters.m  Questions.m
RosProjects/: README.md
RosProjects/turtlebot_gesture_control/: package.xml  setup.py
RosProjects/turtlebot_gesture_control/config/: turtlebot.rviz
RosProjects/turtlebot_gesture_control/launch/: turtlebot_launch.py
RosProjects/turtlebot_gesture_control/models/: turtlebot.sdf  turtlebot3_waffle.sdf
RosProjects/turtlebot_gesture_control/turtlebot/: gnss_mock.py  hand_gesture_detector.py  imu_simulator.py  rmse_calculator.py  robot_controller.py
RosProjects/turtlebot_gesture_control/urdf/: turtlebot.urdf
RosProjects/turtlebot_gesture_control/worlds/: turtlebot_world.world
TunedMassDamper/: TunedMassDamper.m
TurtleBot Slam,Nav and Cv/beacon_message/: CMakeLists.txt  (+1 more)
(+10 files in other folders)
